kubernetes/yaml/production/api-redis/redis-slave-statefulset.yaml
---
# Source: redis/templates/redis-slave-statefulset.yaml

apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: api-redis-slave
  labels:
    app: redis
spec:
  replicas: 1
  serviceName: api-redis-headless
  selector:
    matchLabels:
      role: slave
      app: redis
  template:
    metadata:
      labels:
        role: slave
        app: redis
      annotations:
        checksum/health: b1e03a7e299df7ade6f071271a94587603d6da9759f48dc73c1def4ba77e8343
        checksum/configmap: bd6c7dfec70ad5f2597854f266123cd152281c436f3724cabbcfa3fbde1813d7
        checksum/secret: 4b63a78618fb7e271c7aa0f62c34a85d77325fde45efb319a4c314b5eaf7f378
        prometheus.io/port: "9121"
        prometheus.io/scrape: "true"

    spec:
      securityContext:
        fsGroup: 1001
      serviceAccountName: "api-redis"
      containers:
        - name: api-redis
          image: docker.io/bitnami/redis:5.0.5-debian-9-r124
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          command:
            - /bin/bash
            - -c
            - |
              [...]
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local_and_master.sh 5
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local_and_master.sh 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi

          volumeMounts:
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: redis-tmp-conf
              mountPath: /opt/bitnami/redis/etc
        - name: metrics
          image: docker.io/bitnami/redis-exporter:1.1.0-debian-9-r16
          imagePullPolicy: "IfNotPresent"
          command:
            - /bin/bash
            - -c
            - |
              if [[ -f '/secrets/redis-password' ]]; then
               export REDIS_PASSWORD=$(cat /secrets/redis-password)
              fi
              redis_exporter
          args:
          volumeMounts:
          ports:
            - name: metrics
              containerPort: 9121
          resources:
            requests:
              cpu: 100m
              memory: 128Mi

      volumes:
        - name: health
          configMap:
            name: api-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: api-redis
        - name: sentinel-tmp-conf
          emptyDir: {}
        - name: redis-tmp-conf
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app: "redis"
          component: "slave"

      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"

  updateStrategy:
    type: RollingUpdate
