kubernetes/yaml/production/api-redis/redis-master-svc.yaml
---
# Source: redis/templates/redis-master-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: api-redis-master
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: redis
    role: master
