kubernetes/yaml/production/api-redis/redis-slave-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-redis-slave
  labels:
    app: api-redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: api-redis
    role: slave
